fixing welcome page layout issue

--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -34,3 +34,8 @@ ion-item {
 ion-button.white {
   --color: white !important;
 }
+
+.cards {
+  margin: auto;
+  max-width: 1200px;
+}
